--- a/cart.html
+++ b/cart.html
@@ -99,14 +99,70 @@
       color: white;
       font-size: 24px;
     }
+    /* 模态弹出框样式 */
+    .modal {
+      display: none; /* 默认隐藏 */
+      position: fixed;
+      z-index: 3000;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      overflow: auto;
+      background-color: rgba(0,0,0,0.4);
+    }
+    .modal-content {
+      background-color: #fefefe;
+      margin: 10% auto;
+      padding: 20px;
+      border: 1px solid #888;
+      width: 90%;
+      max-width: 600px;
+      border-radius: 10px;
+      text-align: left;
+    }
+    .close {
+      color: #aaa;
+      float: right;
+      font-size: 28px;
+      font-weight: bold;
+      cursor: pointer;
+    }
+    .close:hover,
+    .close:focus {
+      color: black;
+      text-decoration: none;
+    }
+    .modal h2 {
+      margin-top: 0;
+    }
+    .modal p {
+      margin: 8px 0;
+    }
+    .modal button {
+      background: #FF6B6B;
+      border: none;
+      color: white;
+      padding: 10px 20px;
+      border-radius: 5px;
+      cursor: pointer;
+      font-size: 16px;
+    }
+    .modal button:hover {
+      background: #E64A4A;
+    }
   </style>
   <script type="module">
     // 引入 Firebase 模块（v9.15.0）
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/9.15.0/firebase-app.js";
     import { 
-      getFirestore, collection, getDocs, deleteDoc, doc, updateDoc, addDoc 
+      initializeApp 
+    } from "https://www.gstatic.com/firebasejs/9.15.0/firebase-app.js";
+    import { 
+      getFirestore, collection, getDocs, deleteDoc, doc, updateDoc, addDoc, getDoc 
     } from "https://www.gstatic.com/firebasejs/9.15.0/firebase-firestore.js";
-    import { getAuth, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/9.15.0/firebase-auth.js";
+    import { 
+      getAuth, onAuthStateChanged 
+    } from "https://www.gstatic.com/firebasejs/9.15.0/firebase-auth.js";
 
     // Firebase 配置（与 shop.html 保持一致）
     const firebaseConfig = {
@@ -123,8 +179,10 @@
     const db = getFirestore(app);
     const auth = getAuth(app);
     let currentUser = null;
+    // 用于存放待提交订单的数据
+    window.pendingOrder = null;
 
-    // 页面加载后监听用户登录状态，未登录则跳转到登录页面；已登录则加载购物车数据
+    // 页面加载后监听用户登录状态，未登录则跳转到 login.html；已登录则加载购物车数据
     document.addEventListener("DOMContentLoaded", () => {
       onAuthStateChanged(auth, (user) => {
         if (user) {
@@ -156,7 +214,6 @@
       let total = 0;
       try {
         const itemsSnapshot = await getDocs(collection(db, "carts", currentUser.uid, "items"));
-        // 若购物车为空，显示提示信息
         if (itemsSnapshot.empty) {
           cartContainer.innerHTML = "<p>购物车为空</p>";
         } else {
@@ -180,7 +237,6 @@
             cartContainer.appendChild(cartItem);
           });
         }
-        // 显示总计
         document.getElementById("cart-total").textContent = "总计：¥" + total.toFixed(2);
       } catch (error) {
         console.error("加载购物车失败：", error);
@@ -247,12 +303,10 @@
       }
     };
 
-    // 下单操作：将购物车数据写入 orders 集合，并删除购物车中的数据
+    // 点击页面【下单】按钮时，加载用户信息及订单明细，然后弹出确认订单的弹窗
     window.checkout = async function () {
       if (!currentUser) return;
-      if (!confirm("确定要下单吗？")) return;
       showLoading();
-      
       try {
         // 获取购物车数据
         const cartRef = collection(db, "carts", currentUser.uid, "items");
@@ -263,9 +317,10 @@
           return;
         }
 
-        // 组织订单数据
+        // 生成订单明细与计算总金额
         let orderItems = [];
         let totalAmount = 0;
+        let orderSummaryHtml = "<ul>";
         cartSnapshot.forEach(docSnapshot => {
           const item = docSnapshot.data();
           orderItems.push({
@@ -277,15 +332,62 @@
             productId: item.productId
           });
           totalAmount += item.price * item.quantity;
+          orderSummaryHtml += `<li>${item.name} × ${item.quantity} = ¥${(item.price * item.quantity).toFixed(2)}</li>`;
         });
+        orderSummaryHtml += "</ul>";
+        orderSummaryHtml += `<p>总计：¥${totalAmount.toFixed(2)}</p>`;
 
-        // 订单信息（客户信息可根据需求调整）
+        // 从 users 集合中获取用户详细信息（假设文档 ID 为当前用户的 uid）
+        const userDocRef = doc(db, "users", currentUser.uid);
+        const userDocSnap = await getDoc(userDocRef);
+        let userInfoHtml = "";
+        if (userDocSnap.exists()) {
+          const userData = userDocSnap.data();
+          userInfoHtml = `<p>姓名：${userData.name || "未知"}</p>
+                          <p>邮箱：${userData.email || currentUser.email}</p>
+                          <p>电话：${userData.phone || "未提供"}</p>
+                          <p>地址：${userData.address || "未填写"}</p>`;
+        } else {
+          userInfoHtml = `<p>无法获取用户信息</p>`;
+        }
+
+        // 将用户信息和订单明细填充到弹出框中
+        document.getElementById("user-info").innerHTML = userInfoHtml;
+        document.getElementById("order-summary").innerHTML = orderSummaryHtml;
+
+        // 保存待提交订单的数据，以便用户在弹出框内确认后使用
+        window.pendingOrder = { orderItems, totalAmount };
+
+        // 显示弹出框
+        document.getElementById("checkout-modal").style.display = "block";
+      } catch (error) {
+        console.error("加载订单数据失败：", error);
+        alert("加载订单数据失败，请稍后再试！");
+      } finally {
+        hideLoading();
+      }
+    };
+
+    // 弹出框内的【下单】按钮，确认订单
+    window.confirmOrder = async function () {
+      if (!currentUser) return;
+      if (!confirm("确认下单吗？")) return;
+      showLoading();
+      try {
+        if (!window.pendingOrder) {
+          alert("订单数据丢失，请重试！");
+          hideLoading();
+          return;
+        }
+        const { orderItems, totalAmount } = window.pendingOrder;
+        // 构造订单数据（可根据需要补充或调整客户信息）
         const orderData = {
           customer: {
             name: currentUser.displayName || "未知用户",
             email: currentUser.email,
-            phone: "未提供",
-            address: "未填写地址"
+            // 如果需要可从弹出框中获取更多信息，或直接使用从 users 集合中获取的信息
+            phone: "",
+            address: ""
           },
           items: orderItems,
           total: totalAmount,
@@ -297,12 +399,17 @@
         await addDoc(ordersRef, orderData);
 
         // 删除购物车中的数据
+        const cartRef = collection(db, "carts", currentUser.uid, "items");
+        const cartSnapshot = await getDocs(cartRef);
         for (const docSnapshot of cartSnapshot.docs) {
           await deleteDoc(docSnapshot.ref);
         }
 
         alert("订单提交成功！");
-        loadCartItems(); // 重新加载购物车，现为空
+        // 清除待提交订单数据，并关闭弹出框
+        window.pendingOrder = null;
+        document.getElementById("checkout-modal").style.display = "none";
+        loadCartItems();
       } catch (error) {
         console.error("下单失败：", error);
         alert("下单失败，请稍后再试！");
@@ -310,6 +417,21 @@
         hideLoading();
       }
     };
+
+    // 为弹出框中的关闭按钮绑定事件
+    window.addEventListener("DOMContentLoaded", () => {
+      document.getElementById("modal-close").onclick = function () {
+        document.getElementById("checkout-modal").style.display = "none";
+      };
+
+      // 点击弹出框背景区域也关闭弹窗（可选）
+      window.onclick = function(event) {
+        const modal = document.getElementById("checkout-modal");
+        if (event.target == modal) {
+          modal.style.display = "none";
+        }
+      };
+    });
   </script>
 </head>
 <body>
@@ -325,11 +447,31 @@
 
   <div class="total" id="cart-total">总计：¥0.00</div>
 
+  <!-- 点击此按钮弹出确认订单的弹出框 -->
   <button onclick="checkout()" style="padding: 10px 20px; font-size: 18px; background: #FF6B6B; color: white; border: none; border-radius: 5px; cursor: pointer;">
     下单
   </button>
 
   <!-- 加载覆盖层 -->
   <div id="loading-overlay">加载中...</div>
+
+  <!-- 模态弹出框，用于确认订单 -->
+  <div id="checkout-modal" class="modal">
+    <div class="modal-content">
+      <span id="modal-close" class="close">&times;</span>
+      <h2>确认订单</h2>
+      <div id="user-info">
+        <!-- 从 users 集合加载的用户信息将显示在此 -->
+        <p>加载用户信息...</p>
+      </div>
+      <hr>
+      <div id="order-summary">
+        <!-- 订单明细将显示在此 -->
+        <p>加载订单明细...</p>
+      </div>
+      <br>
+      <button onclick="confirmOrder()">下单</button>
+    </div>
+  </div>
 </body>
 </html>
