--- a/cart.html
+++ b/cart.html
@@ -86,7 +86,7 @@
     }
     /* 加载覆盖层 */
     #loading-overlay {
-      display: none; /* 默认隐藏 */
+      display: none;
       position: fixed;
       top: 0;
       left: 0;
@@ -101,7 +101,7 @@
     }
     /* 模态弹出框样式 */
     .modal {
-      display: none; /* 默认隐藏 */
+      display: none;
       position: fixed;
       z-index: 3000;
       left: 0;
@@ -158,7 +158,7 @@
       initializeApp 
     } from "https://www.gstatic.com/firebasejs/9.15.0/firebase-app.js";
     import { 
-      getFirestore, collection, getDocs, deleteDoc, doc, updateDoc, addDoc, getDoc 
+      getFirestore, collection, getDocs, deleteDoc, doc, updateDoc, addDoc, getDoc, runTransaction 
     } from "https://www.gstatic.com/firebasejs/9.15.0/firebase-firestore.js";
     import { 
       getAuth, onAuthStateChanged 
@@ -179,7 +179,7 @@
     const db = getFirestore(app);
     const auth = getAuth(app);
     let currentUser = null;
-    // 用于存放待提交订单的数据
+    // 用于保存待提交订单的数据
     window.pendingOrder = null;
 
     // 页面加载后监听用户登录状态，未登录则跳转到 login.html；已登录则加载购物车数据
@@ -196,13 +196,11 @@
 
     // 显示加载覆盖层
     function showLoading() {
-      const overlay = document.getElementById("loading-overlay");
-      overlay.style.display = "flex";
+      document.getElementById("loading-overlay").style.display = "flex";
     }
     // 隐藏加载覆盖层
     function hideLoading() {
-      const overlay = document.getElementById("loading-overlay");
-      overlay.style.display = "none";
+      document.getElementById("loading-overlay").style.display = "none";
     }
 
     // 加载当前用户购物车中的商品（Firestore 中 carts/{user.uid}/items 集合）
@@ -252,9 +250,7 @@
       showLoading();
       try {
         const itemRef = doc(db, "carts", currentUser.uid, "items", itemId);
-        await updateDoc(itemRef, {
-          quantity: currentQuantity + 1
-        });
+        await updateDoc(itemRef, { quantity: currentQuantity + 1 });
         loadCartItems();
       } catch (error) {
         console.error("增加数量失败：", error);
@@ -274,9 +270,7 @@
       showLoading();
       try {
         const itemRef = doc(db, "carts", currentUser.uid, "items", itemId);
-        await updateDoc(itemRef, {
-          quantity: currentQuantity - 1
-        });
+        await updateDoc(itemRef, { quantity: currentQuantity - 1 });
         loadCartItems();
       } catch (error) {
         console.error("减少数量失败：", error);
@@ -303,6 +297,27 @@
       }
     };
 
+    // 生成订单号码，格式为 A001、A002……当达到 A999 后变成 B001，以此类推
+    async function generateOrderNumber() {
+      const counterRef = doc(db, "counters", "orderCounter");
+      const newCounter = await runTransaction(db, async (transaction) => {
+        const counterDoc = await transaction.get(counterRef);
+        let counterValue = 0;
+        if (counterDoc.exists()) {
+          counterValue = counterDoc.data().value;
+        }
+        const nextCounter = counterValue + 1;
+        transaction.set(counterRef, { value: nextCounter });
+        return nextCounter;
+      });
+      // 计算字母部分和数字部分
+      const letterIndex = Math.floor((newCounter - 1) / 999);
+      const numberPart = ((newCounter - 1) % 999) + 1;
+      const letter = String.fromCharCode("A".charCodeAt(0) + letterIndex);
+      const numberStr = numberPart.toString().padStart(3, "0");
+      return letter + numberStr;
+    }
+
     // 点击页面【下单】按钮时，加载用户信息及订单明细，然后弹出确认订单的弹窗
     window.checkout = async function () {
       if (!currentUser) return;
@@ -316,7 +331,6 @@
           hideLoading();
           return;
         }
-
         // 生成订单明细与计算总金额
         let orderItems = [];
         let totalAmount = 0;
@@ -368,7 +382,7 @@
       }
     };
 
-    // 弹出框内的【下单】按钮，确认订单
+    // 弹出框内的【下单】按钮，确认订单（包括生成订单号码）
     window.confirmOrder = async function () {
       if (!currentUser) return;
       if (!confirm("确认下单吗？")) return;
@@ -380,12 +394,15 @@
           return;
         }
         const { orderItems, totalAmount } = window.pendingOrder;
-        // 构造订单数据（可根据需要补充或调整客户信息）
+        // 生成订单号码
+        const orderNumber = await generateOrderNumber();
+        // 构造订单数据
         const orderData = {
+          orderNumber, // 新增的订单号码字段
           customer: {
             name: currentUser.displayName || "未知用户",
             email: currentUser.email,
-            // 如果需要可从弹出框中获取更多信息，或直接使用从 users 集合中获取的信息
+            // 可根据需要补充更多信息
             phone: "",
             address: ""
           },
@@ -423,7 +440,6 @@
       document.getElementById("modal-close").onclick = function () {
         document.getElementById("checkout-modal").style.display = "none";
       };
-
       // 点击弹出框背景区域也关闭弹窗（可选）
       window.onclick = function(event) {
         const modal = document.getElementById("checkout-modal");
@@ -461,12 +477,10 @@
       <span id="modal-close" class="close">&times;</span>
       <h2>确认订单</h2>
       <div id="user-info">
-        <!-- 从 users 集合加载的用户信息将显示在此 -->
         <p>加载用户信息...</p>
       </div>
       <hr>
       <div id="order-summary">
-        <!-- 订单明细将显示在此 -->
         <p>加载订单明细...</p>
       </div>
       <br>
